Fixes editor layout issues

--- a/src/vs/editor/browser/widget/multiDiffEditorWidget/style.css
+++ b/src/vs/editor/browser/widget/multiDiffEditorWidget/style.css
@@ -16,7 +16,7 @@
 	border-left: 2px var(--vscode-notebook-focusedCellBorder) solid;
 }
 
-.monaco-component .multiDiffEntry .editor {
+.monaco-component .multiDiffEntry .editorParent .editorContainer {
 	border-left: 17px var(--vscode-tab-inactiveBackground) solid;
 }
 
